fixed blog overflow

--- a/static/css/blogs.css
+++ b/static/css/blogs.css
@@ -350,7 +350,3 @@ padding: 20px;
   max-width: 100%;
   height: auto;
 }
-
-#blog-detail .container .row li a{
-  word-wrap: break-word;
-}
